--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>multiplayer paint</title>
+	<link rel="stylesheet" href="https://painscreen.is-a.dev/fonts.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="index.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Quicksand:wght@500&family=Roboto+Condensed:ital,wght@0,286;1,286&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="jetbrains-mono">
   <div class="loginContainer">
     <div class="login">
 		<h1>Connect</h1>
